gitops/core/weave/helm.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave
  namespace: default
spec:
  parentRefs:
    - name: envoy-https
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - "weave.juancarlosvaldes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ww-gitops-weave-gitops
          port: 9001
          weight: 1
